<resources>
    <string name="app_name">KotlinHabitTracker</string>
    <string name="habit_name">Enter habits name</string>
    <string name="habit_description">Enter habits description</string>
    <string name="habit_priority">Priority</string>
    <string name="habit_type">Type</string>
    <string name="habit_useful">Useful</string>
    <string name="habit_harmful">Harmful</string>
    <string name="number_runs">Number of runs</string>
    <string name="frequency">Frequency of execution</string>
    <string name="button_ready">READY</string>
    <string name="nav_screen">Home screen</string>
    <string name="nav_info">About application</string>
    <string name="user_name">helena.ryabyh@gmail.com </string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string-array name="spinnerValues">
        <item>paramount</item>
        <item>secondary</item>
        <item>minor</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_one">Фильтры и сортировки</string>
    <string name="text_two">Фильтровать по названию</string>
</resources>
