<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".HabitFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/habit_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/habit_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editName"
            app:layout_constraintVertical_bias="0.062" />

        <TextView
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="2dp"
            android:text="@string/habit_priority"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDescription" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spinnerValues"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/priority"
            app:layout_constraintTop_toTopOf="@+id/priority" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="2dp"
            android:text="@string/habit_type"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priority" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="33dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/spinner">

            <RadioButton
                android:id="@+id/radio_useful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/habit_useful"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.566"
                app:layout_constraintStart_toEndOf="@+id/type"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <RadioButton
                android:id="@+id/radio_harmful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/habit_harmful"
                app:layout_constraintStart_toStartOf="@+id/radio_useful"
                app:layout_constraintTop_toBottomOf="@+id/radio_useful" />


        </RadioGroup>

        <EditText
            android:id="@+id/numberOfRuns"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/number_runs"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/frequencyOfExecution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/frequency"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberOfRuns" />

        <Button
            android:id="@+id/button_ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/button_ready"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frequencyOfExecution" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>